--- a/SpaceWay/Views/Flights/Delete.cshtml
+++ b/SpaceWay/Views/Flights/Delete.cshtml
@@ -10,6 +10,7 @@
 <div>
     <h4>Flight</h4>
     <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Aircraft.AircraftID)
@@ -85,7 +86,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
